syntax = "proto3";

package services;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "api/models/holding.proto";
import "api/models/portfolio.proto";
import "api/services/storage_service.proto"; // Import storage messages

option go_package = "./services";

// PortfolioService handles business logic related to portfolios and holdings management.
// See storage_service.proto for CRUD operations.
service PortfolioService {
  // Calculates the current total value of a portfolio in a specified currency.
  rpc CalculatePortfolioValue(CalculatePortfolioValueRequest) returns (PortfolioValueResponse);

  // Retrieves performance metrics for a portfolio over a specified period.
  rpc GetPortfolioPerformance(GetPortfolioPerformanceRequest) returns (PortfolioPerformanceResponse);

  // Suggests rebalancing actions based on target allocation (future feature).
  // rpc SuggestRebalancing(SuggestRebalancingRequest) returns (RebalancingSuggestionResponse);
}

message CalculatePortfolioValueRequest {
  string portfolio_id = 1;
  string quote_asset_id = 2; // e.g., "USD", "BTC" - the currency to calculate value in
  google.protobuf.Timestamp at_time = 3; // Optional: Calculate value at a specific point in time (requires price history)
}

message PortfolioValueResponse {
  string portfolio_id = 1;
  string quote_asset_id = 2;
  // Monetary value represented by amount and precision. real_value = amount / (10^precision)
  int64 total_value_amount = 3;
  uint32 precision = 4;
  google.protobuf.Timestamp calculation_time = 5;
  // Could also include breakdown by asset
}

message GetPortfolioPerformanceRequest {
  string portfolio_id = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  string benchmark_asset_id = 4; // Optional: Asset to compare performance against (e.g., BTC, SPY)
}

message PortfolioPerformanceResponse {
  string portfolio_id = 1;
  // Various performance metrics:
  double return_percentage = 2;
  double volatility = 3;
  double sharpe_ratio = 4; // Example metric
  // ... other metrics
}
